--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,11 +3,11 @@ html, body{
 }	
 
 body{
-    background-color: #ffffff;
+    background-color: #f4f4f4;
     margin: 0;
     padding: 0;
     font-family: 'EB Garamond', serif;
-    font-size: 12pt;
+    font-size: 15pt/1.5;
     color: #333333;
 }
 
@@ -73,16 +73,80 @@ header{
      
 #menu li a{ 
     color: #FFF;
+    font-size: 12pt;
+    font-family: 'Josefin Sans', sans-serif;
 }
      
 #menu li:hover a, #menu li span{
     color: #333333;
     text-decoration: none;
+    font-size: 12pt;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
+/*************/
+/* Seccion 1 */
+/*************/
+#welcome
+{   overflow: hidden;
+    width: 1000px;
+    margin: 0px auto;
+}
+         
+#welcome .title{
+    margin-top: 20px;
+    padding: 20px;
+    font-size: 30pt;
+    text-align: center;
+}
+ 
+#welcome p{
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+/*************/
+/* Seccion 2 */
+/*************/
+#section-2{
+    overflow: hidden;
+    margin-top: 5em;
+    padding-top: 1em;
+    text-align: center;
+}
+.row #column1,
+.row #column2,
+.row #column3{
+    float: left;
+    width: 320px;
+    padding: 80px 40px 80px 40px;
+}
+.column-title h2{
+    margin: 1em 0em;
+    font-size: 1.6em;
+    font-weight: 700;
+}
+.button {
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    background-color: #8E0000;
+    color: white;
+    border: 2px solid #8E0000;
+    padding: 16px 32px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+     
+.button:hover {
+    background-color: white;
+    color: #8E0000;
+}
 
 h1, h2, h3{
-    font-family: 'Josefin Sans', sans-serif;
     margin: 0;
     padding: 0;
     color: #333333;
@@ -98,24 +162,10 @@ ol, ul{
     padding: 0;
     list-style: none;
 }
-.nav{
-    font-size: 14pt;
-    font-family: 'Josefin Sans', sans-serif;
-    color: #333333;
-    text-decoration: none;
-    margin: 20px;
-}
-.nav:hover{
-    font-size: 14pt;
-    font-family: 'Josefin Sans', sans-serif;
-    color: #8E0000;
-    text-decoration: none;
-    margin: 20px;
-}
 footer{
     background-color: #333333;
     color: #ffffff;
-    font-size: 12pt;
+    font-size: 12pt/1.5;
     text-align: center;
     padding: 5px;
     margin-top: 10px;
